See https://github.com/Deuce1058/yardi/issues/110
yardi\
  ejbModule\
    com\yardi\ejb\
      EditPasswordPolicyBean
      UserProfileBean

  src\com\yardi\
    QSECOFR\
      EditUserProfileService